# OMDb_pipeline

./: .gitignore  env.example  omdapi.json  pyproject.toml  readme.md
src/: api.py  auth.py  dashboard.py  database.py  main.py
